--- a/src/app/recipe-edit/recipe-edit.html
+++ b/src/app/recipe-edit/recipe-edit.html
@@ -42,9 +42,10 @@
                 <label for="imagePath" class="form-label">Image URL</label>
                 <input 
                 type="text" 
-                id="imagePath" 
+                id="imagePath"
                 formControlName="imagePath" 
                 class="form-control"
+                (change)="onImagePathChange()"
                 />
             </div>
             </div>
@@ -52,14 +53,12 @@
         
         <div class="row">
             <div class="col-md-12 mb-3">
-            @if (recipeForm.get('imagePath')?.value) {
                 <img 
-                [src]="imageUrl" 
+                [src]="imageUrl()" 
                 class="img-fluid" 
                 style="max-height: 200px;" 
                 alt="Image Preview"
                 />
-            }
             </div>
         </div>
         
