--- a/src/app/header/header.html
+++ b/src/app/header/header.html
@@ -1,11 +1,12 @@
 <header class="d-flex justify-content-center py-3">
     <ul class="nav nav-pills">
     <li class="nav-item"><a routerLink="/" class="nav-link" 
-        [ngClass]="{'active': activeLink === '/'}"
+        routerLinkActive="active"
+        [routerLinkActiveOptions]="{exact: true}"
         (click)="setActiveLink('/')"
         aria-current="page">Home</a></li>
     <li class="nav-item"><a routerLink="/recipes" class="nav-link" 
-        [ngClass]="{'active': activeLink === '/recipes'}"
+        routerLinkActive="active"
         (click)="setActiveLink('/recipes')">Recipe List</a></li>
     </ul>
 </header>
