--- a/src/app/recipe-edit/recipe-edit.html
+++ b/src/app/recipe-edit/recipe-edit.html
@@ -87,6 +87,11 @@
                 formControlName="category" 
                 class="form-control"
                 />
+                @if (recipeForm.get('category')?.invalid && recipeForm.get('category')?.touched) {
+                  <div class="text-danger">
+                    Category is required.
+                  </div>
+                }
             </div>
             </div>
         </div>
